--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
