--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7"
   },
