--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
