--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-query": "^3.39.3",
