--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.14",
     "jwt-decode": "^4.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
     "react-query": "^3.39.3",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
